# pop_exam_config

./: LICENSE  PoP_exam.code-workspace  README.md  pyproject.toml  setup_exam.sh
